force-app/main/default/objects/Map_Supporting_Document__c/Map_Supporting_Document__c.object-meta.xml
<CustomObject>
    <description>Map Legal Documents for Map Approval</description>
    <label>Map Legal Document</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Map Supporting Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Legal Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>