force-app/main/default/objects/Map_Supporting_Document__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Name_for_unique_index__c</field>
            <operation>contains</operation>
            <valueField>Account.Account_Name_for_unique_index__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Map_Supporting_Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>