force-app/main/default/objects/Map_Supporting_Document__c/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <description>Buyer Name</description>
    <inlineHelpText>Buyer Name</inlineHelpText>
    <label>Buyer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>