force-app/main/default/objects/Map_Supporting_Document__c/fields/Document_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Document_Expiry__c</fullName>
    <description>Date of expiration of the document</description>
    <inlineHelpText>Date of expiration of the document</inlineHelpText>
    <label>Document Expiry</label>
    <type>Date</type>
</CustomField>