force-app/main/default/objects/Map_Supporting_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Document Type for The Map</description>
    <inlineHelpText>Document Type for The Map</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPA</fullName>
                <label>ARPA</label>
            </value>
            <value>
                <fullName>PSA</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
            <value>
                <fullName>Credit Committee Report</fullName>
            </value>
            <value>
                <fullName>Buyer/Supplier Notification Letter</fullName>
            </value>
            <value>
                <fullName>Offer of Invoice Financing</fullName>
            </value>
            <value>
                <fullName>Trade Documents</fullName>
            </value>
            <value>
                <fullName>GTC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>