force-app/main/default/objects/Map_Supporting_Document__c/fields/Incomlend_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incomlend Certifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Map_Supporting_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>