force-app/main/default/objects/Map_Supporting_Document__c/fields/Orginal_Document_Certification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Orginal_Document_Certification_Notes__c</fullName>
    <label>Orginal Document Certification Notes</label>
    <type>TextArea</type>
</CustomField>