force-app/main/default/objects/Map_Supporting_Document__c/fields/Original_Document_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Document_Certification_Date__c</fullName>
    <description>When the document as been certified by Incomlend</description>
    <inlineHelpText>When the document as been certified by Incomlend</inlineHelpText>
    <label>Original Document Certification Date</label>
    <type>Date</type>
</CustomField>