force-app/main/default/objects/Map_Supporting_Document__c/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <formula>Supplier_Buyer_Map__r.Incomlend_product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product type</label>
    <type>Text</type>
</CustomField>