force-app/main/default/objects/Map_Supporting_Document__c/fields/Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Ref_Number__c</fullName>
    <formula>TEXT(Document_Type__c)+Name</formula>
    <label>Ref Number</label>
    <type>Text</type>
</CustomField>