force-app/main/default/objects/Map_Supporting_Document__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <description>Signed date if necessary</description>
    <inlineHelpText>Signed date if necessary</inlineHelpText>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>