force-app/main/default/objects/Map_Supporting_Document__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Map_Supporting_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>