force-app/main/default/objects/Map_Supporting_Document__c/fields/Supplier_name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_name__c</fullName>
    <description>Supplier Name</description>
    <inlineHelpText>Supplier Name</inlineHelpText>
    <label>Supplier name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>